# SentinelShield

./: .gitignore  CODEX_PROGRESS.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build.yml
companion/: README.md  app.json  package-lock.json  package.json
companion/app/: _layout.tsx
companion/constants/: Colors.ts  theme.ts
companion/plugins/: withSentinelAndroid.js
data/: known_bad_hashes.txt
data/scan_test/: notes.txt  readme.md
rules/: starter.yar
scripts/: build-sidecar.ps1  install-arm64-msvc.ps1  restore-quarantine.ps1
scripts/remote-setup/: api-tunnel-env.sh  check-gcp-progress.sh  check-gcp-services.sh  check-gcp-sudo.sh  check-gcp-sudo2.sh  check-install-running.sh  check-medusa.sh  check-sd.sh  check-services.sh  check-status.sh  check-user-systemd.sh  create-medusa-service.sh  create-wg-client.sh  debug-medusa-auth.sh  debug-medusa.sh  debug-scout.sh  debug-serper.sh  debug-systemd.sh  deploy-gcp-medusa.sh  deploy-lister.sh  deploy-scout-from-local.sh  deploy-scout.sh  final-report.sh  finish-medusa.sh  finish-setup.sh  fix-containers.sh  fix-dns-continue.sh  fix-docker-dns.sh  fix-medusa-key.sh  fix-medusa-service.sh  fix-medusa-start.sh  fix-remaining.sh  fix-requirements.sh  fix-sd.sh  fix-sd2.sh  (+27 more)
src/sidecar/: Cargo.toml
src/sidecar/src/: admin.rs  cleaner.rs  events.rs  ipc_out.rs  log_util.rs  main.rs  memory.rs  network.rs  optimizer.rs  protocol.rs  realtime.rs  rules_updater.rs  scan_engine.rs  scanner.rs  schedule.rs  settings.rs  startup.rs  tasks.rs  threat_history.rs  undo.rs
(+67 files in other folders)
